--- a/env.example
+++ b/env.example
@@ -5,7 +5,10 @@ TWITTER_API_SECRET=your_twitter_api_secret_here
 TWITTER_ACCESS_TOKEN=your_twitter_access_token_here
 TWITTER_ACCESS_TOKEN_SECRET=your_twitter_access_token_secret_here
 
-# Twitter OAuth 2.0 Credentials (for elevated access)
+# Twitter Bearer Token (for v2 API - free tier)
+TWITTER_BEARER_TOKEN=your_bearer_token_here
+
+# Twitter OAuth 2.0 Credentials (optional)
 TWITTER_CLIENT_ID=your_twitter_client_id_here
 TWITTER_CLIENT_SECRET=your_twitter_client_secret_here
 
