Added testing output functionality

--- a/env.example
+++ b/env.example
@@ -49,3 +49,7 @@ METRICS_ENABLED=true
 
 # Environment
 ENVIRONMENT=production
+
+# Testing Options
+TEST_MODE=false
+TEST_OUTPUT=console  # Options: console, file, discord, slack, email
